--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
   <h3>Đăng khóa học</h3>
 
-  <form method="post" action="/courses/store">
+  <form class="mt-4" method="post" action="/courses/store">
     <div class="mb-3">
       <label for="name" class="form-label">Tên khóa học</label>
       <input type="text" class="form-control" name="name" />
@@ -9,7 +9,7 @@
 
     <div class="mb-3">
       <label for="description" class="form-label">Mô tả khóa học</label>
-      <input type="text" class="form-control" name="description" />
+      <textarea class="form-control" name="description"></textarea>
     </div>
 
     <div class="mb-3">
