--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,7 +1,7 @@
 <div class="mt-4">
   <div>
-    <h3>Khóa học của tôi</h3>
-    <a href="/me/trash/courses">Thùng rác</a>
+    <a href="/me/stored/courses">Danh sách khóa học</a>
+    <h3>Khóa học đã xóa</h3>
   </div>
 
   <table class="table mt-4">
@@ -21,21 +21,19 @@
           <td>{{this.level}}</td>
           <td>{{this.createdAt}}</td>
           <td>
-            <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
+            <a href="" class="btn btn-link btn-restore" data-id="{{this._id}}">Khôi phục</a>
             <a
               href=""
               class="btn btn-link"
               data-bs-toggle="modal"
               data-bs-target="#delete-course-modal"
               data-bs-id="{{this._id}}"
-            >Xóa</a>
+            >Xóa vĩnh viễn</a>
           </td>
         </tr>
       {{else}}
         <tr>
-          <td colspan="5" class="text-center">Bạn chưa đăng khóa học nào.
-            <a href="/courses/create">Đăng khóa học</a>
-          </td>
+          <td colspan="5" class="text-center">Thùng rác trống.</td>
         </tr>
       {{/each}}
     </tbody>
@@ -57,26 +55,43 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Bạn chắc chắn muốn xóa khóa học này?
+        Hành động này không thể khôi phục. Bạn vẫn xóa khóa học này?
       </div>
       <div class="modal-footer">
-        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa bỏ</button>
+        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa vĩnh viễn</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
       </div>
     </div>
   </div>
 </div>
 
-{{! Delete hidden form }}
-
 <form class="mt-4" method="post" name="delete-course-form"></form>
+<form class="mt-4" method="post" name="restore-course-form"></form>
 
 <script>
-  let deleteForm = document.forms['delete-course-form']; let courseId; const deleteModal =
-  document.getElementById('delete-course-modal'); const btnDeleteCourse =
-  document.getElementById('btn-delete-course'); /* when dialog confirm is clicked */
+  let courseId;
+  let deleteForm = document.forms['delete-course-form'];
+  let restoreForm = document.forms['restore-course-form'];
+  const deleteModal = document.getElementById('delete-course-modal');
+  const btnDeleteCourse = document.getElementById('btn-delete-course');
+  const restoreBtn = document.querySelectorAll('.btn-restore') 
+  
+  //when dialog confirm is clicked 
   deleteModal.addEventListener('show.bs.modal', event => { const button = event.relatedTarget;
-  courseId = button.getAttribute('data-bs-id') }); /* when delete course btn is clicked */
-  btnDeleteCourse.onclick = function() { deleteForm.action = '/courses/' + courseId +
-  '?_method=delete'; deleteForm.submit(); }
+  courseId = button.getAttribute('data-bs-id') });
+  
+  //when delete course btn is clicked
+  btnDeleteCourse.onclick = function() {
+    deleteForm.action = '/courses/' + courseId + '/force?_method=delete';
+    deleteForm.submit();
+  }
+
+  //when restore course btn is clicked
+  restoreBtn.forEach(item => {
+    item.addEventListener('click', event => {
+      event.preventDefault();
+      const idCourse = item.dataset.id;
+      restoreForm.action = '/courses/' + idCourse + '/restore?_method=patch'; restoreForm.submit();
+    })
+  })
 </script>
