--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,12 +1,30 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="post" action="/courses/handle-form-action">
   <div>
     <a href="/me/stored/courses">Danh sách khóa học</a>
     <h3>Khóa học đã xóa</h3>
+
+     <div class="mt-4 d-flex align-items-center">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="checkbox-all" />
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+
+      <select class="form-select form-select-sm checkbox-select-all-options" name="action" required>
+        <option value="">-- Hành động --</option>
+        <option value="restore">Khôi phục</option>
+        <option value="force-delete">Xóa vĩnh viễn</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm disabled btn-submit">Thực hiện</button>
+    </div>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">#</th>
         <th scope="col">Tên khóa học</th>
         <th scope="col">Trình độ</th>
@@ -16,6 +34,16 @@
     <tbody>
       {{#each courses}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input
+                class="form-check-input item-checkbox"
+                type="checkbox"
+                value="{{this._id}}"
+                name="courseIds[]"
+              />
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
@@ -38,7 +66,7 @@
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! Confirm delete course }}
 <div
@@ -72,16 +100,25 @@
   let courseId;
   let deleteForm = document.forms['delete-course-form'];
   let restoreForm = document.forms['restore-course-form'];
+  let containerForm = document.forms['container-form'];
   let deleteModal = document.getElementById('delete-course-modal');
   let btnDeleteCourse = document.getElementById('btn-delete-course');
   let restoreBtn = document.querySelectorAll('.btn-restore');
+  let checkboxAll = document.getElementById('checkbox-all');
+  let courseItemCheckbox = document.querySelectorAll('.item-checkbox');
+  let btnSubmit = document.querySelector('.btn-submit');
+  let optionAction = document.querySelector('.checkbox-select-all-options');
+  let i= 0;
+  let optionValue = '';
   
   //when dialog confirm is clicked
   deleteModal.addEventListener('show.bs.modal', event => {
     let button = event.relatedTarget;
     courseId = button.getAttribute('data-bs-id');
 
-  }); //when delete course btn is clicked
+  });
+  
+  //when delete course btn is clicked
   btnDeleteCourse.onclick = function() {
     deleteForm.action = '/courses/' + courseId + '/force?_method=delete';
     deleteForm.submit();
@@ -91,7 +128,45 @@
   restoreBtn.forEach(item => { item.addEventListener('click', event => {
     event.preventDefault();
     let idCourse = item.dataset.id;
-    restoreForm.action = '/courses/' + idCourse + '/restore?_method=patch'; restoreForm.submit();
+    restoreForm.action = '/courses/' + idCourse + '/restore?_method=patch';
+    restoreForm.submit();
     })
   })
+
+  // when chekbox all is changed
+  checkboxAll.onchange = function() {
+    let isCheckedAll = checkboxAll.checked;
+    isCheckedAll ? i = courseItemCheckbox.length : i = 0;
+    hiddenSubmitButton(i);
+    courseItemCheckbox.forEach(item => {
+      item.checked = isCheckedAll;
+    })
+  }
+
+   //when item checkbox is changed
+  courseItemCheckbox.forEach(item => {
+    item.onchange = function() {
+      item.checked ? i++ : i--;
+      checkboxAll.checked = i === courseItemCheckbox.length;
+      hiddenSubmitButton(i);
+    }
+  })
+
+  // choose value for action submit
+  optionAction.onchange = function() {
+    optionValue = optionAction.value;
+    hiddenSubmitButton(i)
+  }
+
+  // add or remove attribute disabed
+  function hiddenSubmitButton(i) {
+    optionValue && i > 0 ?  btnSubmit.classList.remove('disabled') : btnSubmit.classList.add('disabled'); 
+  }
+
+  //submit btn is clicked
+  btnSubmit.onclick = function (event) {
+    event.preventDefault();
+    let isSubmittable = !btnSubmit.classList.contains('disabled')
+    isSubmittable && containerForm.submit()
+  }
 </script>
