--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -4,13 +4,6 @@
     <h3>Khóa học đã xóa</h3>
 
      <div class="mt-4 d-flex align-items-center">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkbox-all" />
-        <label class="form-check-label" for="checkbox-all">
-          Chọn tất cả
-        </label>
-      </div>
-
       <select class="form-select form-select-sm checkbox-select-all-options" name="action" required>
         <option value="">-- Hành động --</option>
         <option value="restore">Khôi phục</option>
@@ -24,11 +17,27 @@
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col"></th>
-        <th scope="col">#</th>
-        <th scope="col">Tên khóa học</th>
-        <th scope="col">Trình độ</th>
-        <th scope="col" colspan="2">Thời gian xóa</th>
+        <th scope="col">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="checkbox-all" />
+          </div>
+        </th>
+        <th scope="col">
+          ID
+          {{{sortable '_id' _sort}}}
+        </th>
+        <th scope="col">
+          Tên khóa học
+          {{{sortable 'name' _sort}}}
+        </th>
+        <th scope="col">
+          Trình độ
+          {{{sortable 'level' _sort}}}
+        </th>
+        <th scope="col" colspan="2">
+          Thời gian xóa
+          {{{sortable 'deletedAt' _sort}}}
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -44,7 +53,7 @@
               />
             </div>
           </td>
-          <th scope="row">{{sum @index 1}}</th>
+          <th scope="row">{{this._id}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
           <td>{{this.deletedAt}}</td>
